--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src\assets\favicons\favicon-32x32.png" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://github.com/dev-aditya99/Quizem/blob/main/src/assets/favicons/favicon-32x32.png?raw=true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quizem</title>
 </head>
